gac_sb/objects/INNOcoutStandard__c.object
<CustomObject>
    <fields>
        <fullName>Cout_Standard_Redacteur__c</fullName>
        <label>Coût Standard Rédacteur</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Consultant__c</fullName>
        <label>Coût standard Consultant</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Manager__c</fullName>
        <label>Coût standard Manager</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Redacteur_RO__c</fullName>
        <label>Coût standard Rédacteur RO</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Superviseur__c</fullName>
        <label>Coût standard Superviseur</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prod_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Prod id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Coût standard INNO advance</label>
    <listViews>
        <fullName>Tout</fullName>
        <columns>NAME</columns>
        <columns>Cout_standard_Consultant__c</columns>
        <columns>Cout_standard_Redacteur_RO__c</columns>
        <columns>Cout_standard_Superviseur__c</columns>
        <columns>Cout_standard_Manager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>CSinno-{000}</displayFormat>
        <label>Coût standard INNO advance 2</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coûts standards INNO advance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>